# saler

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/agent/: factory.py
src/api/: __init__.py  chat.py  conv.py  product.py
src/modules/chat/: dto.py  service.py
src/modules/conv/: dto.py  models.py  service.py
src/modules/product/: dto.py  models.py  service.py
src/store/: base.py  connect.py
src/store/db/: connect.py
src/store/obs/: local.py
src/utils/: config.py  embedder.py  logger.py  schema.py  snowflake.py
templates/: index.html
